src/tests/snapshots/amber__tests__translating__add_num_expression.ab__bash-4.3.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "+",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "15.15",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "45.15",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "+",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN {result = ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "+",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "39.45",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "21.18",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "80.12",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "+",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN {result = ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "+",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Subprocess(
                                                                SubprocessFragment {
                                                                    fragment: List(
                                                                        ListFragment {
                                                                            values: [
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "awk 'BEGIN {result = ARGV[1]",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "+",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "3.0",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "9.0",
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            separator: Empty,
                                                                        },
                                                                    ),
                                                                    quoted: true,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "648.0",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "12.23",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
